just trying to get things centered!

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <script src="index.js"></script>
     
-    
+    <!-- FAVICONS -->
+    <!-- TEMPORARY DISABLES
     <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
@@ -18,18 +19,18 @@
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="msapplication-config" content="favicon/browserconfig.xml">
     <meta name="theme-color" content="#ffffff">
+    -->
     <!-- Favicon made by Freepik from www.flaticon.com -->
 </head>
 <body>
 
-
-<div class="position-relative">
-    <div class="card position-absolute start-50 translate-middle-x" style="width: 18rem;">
+<div class="container-fluid position-relative">
+    <div class="card position-absolute top-0 start-50 translate-middle-x" style="width: 18rem;">
         <img src="images/presentationphoto.png" class="card-img-top" alt="Bilde av Nikolai">
-        <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+        <div class="card-body text-center">
+            <h5 class="card-title">Velkommen!</h5>
+            <p class="card-text">Jeg går for øyeblikket førsteåret på Anvendt Datateknologi på OsloMet, og tester stadig ut nye ting, som for eksempel denne siden... 🙈</p>
+            <a href="https://www.instagram.com/nikolai_drivdal/" class="btn btn-primary">Følg meg gjerne på Instagram</a>
         </div>
     </div>
 </div>
