--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <script src="index.js"></script>
+    <link rel="stylesheet" href="stylesheet.css">
     
     <!-- FAVICONS -->
     <!-- TEMPORARY DISABLES
@@ -25,13 +26,11 @@
 <body>
 
 <div class="container-fluid position-relative">
-    <div class="card position-absolute top-0 start-50 translate-middle-x" style="width: 18rem;">
-        <img src="images/presentationphoto.png" class="card-img-top" alt="Bilde av Nikolai">
-        <div class="card-body text-center">
-            <h5 class="card-title">Velkommen!</h5>
-            <p class="card-text">Jeg går for øyeblikket førsteåret på Anvendt Datateknologi på OsloMet, og tester stadig ut nye ting, som for eksempel denne siden... 🙈</p>
-            <a href="https://www.instagram.com/nikolai_drivdal/" class="btn btn-primary">Følg meg gjerne på Instagram</a>
-        </div>
+    <div class="position-absolute top-0 start-50 translate-middle-x text-center" style="width: 18rem">
+        <img src="images/presentationphoto.png" class="rounded mt-5 mb-3" alt="Bilde av Nikolai" style="width: 75%">
+        <h2 class="card-title">Velkommen!</h2>
+        <p class="card-text">Jeg går for øyeblikket førsteåret på Anvendt Datateknologi på OsloMet, og tester stadig ut nye ting, som for eksempel denne siden... 🙈</p>
+        <a href="https://www.instagram.com/nikolai_drivdal/" class="btn btn-dark btn-outline-light instagram">Følg meg gjerne på Instagram</a>
     </div>
 </div>
 
