Added all buttons

--- a/index.html
+++ b/index.html
@@ -27,10 +27,15 @@
 
 <div class="container-fluid position-relative">
     <div class="position-absolute top-0 start-50 translate-middle-x text-center" style="width: 18rem">
-        <img src="images/presentationphoto.png" class="rounded mt-5 mb-3" alt="Bilde av Nikolai" style="width: 75%">
-        <h2 class="card-title">Velkommen!</h2>
-        <p class="card-text">Jeg går for øyeblikket førsteåret på Anvendt Datateknologi på OsloMet, og tester stadig ut nye ting, som for eksempel denne siden... 🙈</p>
-        <a href="https://www.instagram.com/nikolai_drivdal/" class="btn btn-dark btn-outline-light instagram">Følg meg gjerne på Instagram</a>
+        <img src="images/presentationphoto.png" class="rounded mt-5 mb-3 shadow-lg" alt="Bilde av Nikolai" style="width: 90%">
+        <h2>Velkommen!</h2>
+        <p>Jeg går for øyeblikket førsteåret på Anvendt Datateknologi på OsloMet, og tester stadig ut nye ting, som for eksempel denne siden... 🙈</p>
+        <a href="https://www.instagram.com/nikolai_drivdal/" class="btn instagram text-nowrap shadow" style="width: 15rem">Følg meg gjerne på Instagram</a>
+        <br><br><br>
+        <a href="https://link.voiapp.io/m9QJ4FpSFeb" class="btn voi text-nowrap shadow" style="width: 15rem">Få 25kr på Voi</a>
+        <br><br>
+        <a id="WoltBtn"  class="btn wolt text-nowrap shadow" style="width: 15rem">Få 100kr på Wolt med koden: <br> 2QMTUSG</a>
+        <input type="text" value="2QMTUSG" id="WoltKode" style="display: none">
     </div>
 </div>
 
